Les messages diffuses sont ajoutes a la fin de la liste